<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/MediumOrchid"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ashish.remindit.GetStarted" >

    <TextView
        android:id="@+id/tvNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvHello"
        android:layout_below="@+id/tvHello"
        android:layout_marginTop="81dp"
        android:text="@string/reminder_note" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvNote"
        android:layout_centerVertical="true"
        android:text="@string/when" />

    <Button
        android:id="@+id/btReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:background="@color/DarkSalmon"
        android:text="@string/set_reminder" />

    <EditText
        android:id="@+id/textNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tvNote"
        android:layout_marginRight="28dp"
        android:layout_toRightOf="@+id/tvTime"
        android:background="@color/Wheat"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <CheckBox
        android:id="@+id/chkSetAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btReminder"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:background="@color/MediumOrchid"
        android:text="@string/set_alarm" />

      <TextView
          android:id="@+id/tvHello"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentLeft="true"
          android:layout_alignParentTop="true"
          android:layout_marginLeft="17dp"
          android:layout_marginTop="17dp"
          android:text="@string/hello" />

</RelativeLayout>
